[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environment/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/World-00.gd" type="Script" id=4]
[ext_resource path="res://GUI/Options.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/UI.gd" type="Script" id=6]
[ext_resource path="res://Game/Game.gd" type="Script" id=7]

[node name="Mirror Runner" type="Node"]
script = ExtResource( 4 )

[node name="Game" type="Control" parent="."]
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" parent="Game" instance=ExtResource( 3 )]

[node name="Player" parent="Game" instance=ExtResource( 2 )]

[node name="Menu" type="Button" parent="Game"]
margin_right = 12.0
margin_bottom = 20.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="UI" instance=ExtResource( 1 )]

[node name="Options" parent="UI" instance=ExtResource( 5 )]

[connection signal="pressed" from="Game/Menu" to="." method="_on_Menu_pressed"]
[connection signal="show_options" from="UI/Menu" to="." method="_on_Menu_show_options"]
[connection signal="start_game" from="UI/Menu" to="." method="_on_Menu_start_game"]
[connection signal="show_menu" from="UI/Options" to="." method="_on_Options_show_menu"]
